styling: fix spacing

--- a/ls202/lesson_6/float_and_positioning.css
+++ b/ls202/lesson_6/float_and_positioning.css
@@ -1,5 +1,6 @@
 body {
     margin: 10px auto;
+    padding: 30px 0;
     font-family: Arial, Helvetica, sans-serif;
     width: 900px;
     max-width: 900px;
@@ -8,13 +9,13 @@ body {
 }
 article {
     margin-left: 10px;
-    padding: 10px;
+    margin-top: 10px;
     box-sizing: border-box;
     width: 900px;
 }
 h1, h2, h3 {
     color: rgba(190, 51, 1, 0.865);
-    margin: 25px 0;
+    margin: 0;
 }
 
 h1 {
